# memory-mcp-1file

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  Dockerfile.fast  Dockerfile.local  Dockerfile.release  README.md  TASK.md  opencode.json  patch_default.py  patch_engine_empty.py  patch_main.py  patch_readme.py  patch_service.py  release_notes.md  spec-kitty.md
.agent/rules/: agents.md
.agent/skills/view-bmad/: SKILL.md
.agent/workflows/: vida-approve.md  vida-bug-fix.md  vida-cascade.md  vida-complete.md  vida-delegate.md  vida-epic.md  vida-execute.md  vida-form.md  vida-implement.md  vida-init.md  vida-lead.md  vida-new.md  vida-parallel.md  vida-plan.md  vida-project-analyze.md  vida-research.md  vida-scan.md  vida-spec-categories.md  vida-spec.md  vida-status.md  vida-sync.md  vida-test.md  vida-think.md  vida.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.kittify/: .dashboard  metadata.yaml
.kittify/memory/: constitution.md
.opencode/: opencode.json
.opencode/command/: vida-approve.md  vida-cascade.md  vida-complete.md  vida-epic.md  vida-feature.md  vida-form.md  vida-implement.md  vida-lead.md  vida-new.md  vida-parallel.md  vida-plan.md  vida-project-analyze.md  vida-research.md  vida-spec.md  vida-status.md  vida-test.md  vida-think.md  vida.md
_patches/candle-transformers/: Cargo.toml
_patches/candle-transformers/candle-transformers-0.9.2/: .cargo_vcs_info.json
doc/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
doc/OLD/: ARCHITECTURE.md  DEVELOPMENT.md  MCP-API-REFERENCE.md  README.md  TODO.md  algorithmic-optimizations.md  build-distribution.md  code-search.md  embedding-pipeline.md  graph-traversal.md  hybrid-retrieval.md  implementation-timeline.md  mcp-server.md  recall-integration.md  storage-backend.md  testing-strategy.md
doc/research/: 2026-01-08-comprehensive-audit.md  code-graph-implementation.md  code_graphs.md  tree-sitter-rust.md
docs/: ADR-001-lazy-initialization.md
kitty-specs/001-memory-mcp-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
kitty-specs/001-memory-mcp-server/checklists/: requirements.md
kitty-specs/001-memory-mcp-server/contracts/: mcp-tools.md
kitty-specs/001-memory-mcp-server/tasks/: WP01-poc-validation.md  (+9 more)
memory/: PROJECT.md  RESEARCH-rmcp-lazy.md
npm/: README.md  package.json  postinstall.js  run.js
scripts/: build_all.sh
src/: config.rs  lib.rs  main.rs  test_utils.rs
src/codebase/: chunker.rs  indexer.rs  manager.rs  mod.rs  relations.rs  scanner.rs  symbol_index.rs  watcher.rs
src/embedding/: adaptive_queue.rs  cache.rs  cleanup.rs  completion_monitor.rs  config.rs  coordinator.rs  engine.rs  handle.rs  hasher.rs  metrics.rs  mod.rs  policy.rs  service.rs  store.rs  worker.rs
src/graph/: leiden.rs  mod.rs  ppr.rs  rrf.rs  traversal.rs
src/lifecycle/: component.rs  mod.rs  registry.rs  shutdown.rs
src/server/: handler.rs  mod.rs  params.rs
src/storage/: mod.rs  schema.surql  surrealdb.rs  traits.rs
src/types/: code.rs  embedding_state.rs  entity.rs  error.rs  memory.rs  mod.rs  safe_thing.rs  search.rs  symbol.rs  thing_id.rs
(+9 files in other folders)
