[package]
name = "memory-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP memory server for AI agents"
license = "MIT"

[dependencies]
# Database
surrealdb = { version = "2", default-features = false, features = ["kv-surrealkv", "rustls"] }

# Embeddings
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
tokenizers = "0.22.2"
hf-hub = { version = "0.4", default-features = false, features = ["ureq"] }

# MCP Protocol
rmcp = { version = "0.12.0", features = ["server", "transport-io", "macros"] }
schemars = "1"

# Graph
petgraph = "0.8.3"

# Code parsing (code-splitter deferred - tree-sitter version conflict)
tree-sitter = "0.22"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
lru = "0.16.2"
blake3 = "1"
rayon = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
