[package]
name = "memory-mcp"
version = "0.2.3"
edition = "2021"
description = "MCP memory server for AI agents"
license = "MIT"

[dependencies]
# Database
surrealdb = { version = "2", default-features = false, features = [
    "kv-surrealkv",
    "rustls",
] }

# Embeddings
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.22.2"
hf-hub = { version = "0.4", default-features = false, features = ["ureq"] }

# MCP Protocol
rmcp = { version = "0.14", features = [
    "server",
    "client",
    "transport-io",
    "macros",
] }
schemars = "1"

# Graph
petgraph = "0.8.3"

# Code parsing - tree-sitter with language grammars
tree-sitter = "0.26"
streaming-iterator = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
lru = "0.16.2"
blake3 = "1"
rayon = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6.0.0"
ignore = "0.4.25"
notify = "8.2.0"
hf-hub-simple-progress = "0.1.2"
libc = "0.2"
sha2 = "0.10.9"
moka = { version = "0.12.12", features = ["future"] }
redb = "3.1.0"
bincode = { version = "=2.0.1", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.fast]
inherits = "release"
opt-level = 3
lto = "off"
codegen-units = 256
panic = "abort"
strip = true
